WIP - Generated types.

--- a/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json/Templates/CustomAny.Core.tt
+++ b/Solutions/Corvus.Json.ExtendedTypes/Corvus.Json/Templates/CustomAny.Core.tt
@@ -29,8 +29,7 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
     private readonly Backing backing;
     private readonly JsonElement jsonElementBacking;
     private readonly string stringBacking;
-    private readonly bool boolBacking;
-    private readonly double numberBacking;
+    private readonly BinaryJsonNumber numericBacking;
     private readonly ImmutableList<JsonAny> arrayBacking;
     private readonly ImmutableList<JsonObjectProperty> objectBacking;
 
@@ -42,8 +41,7 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
         this.jsonElementBacking = default;
         this.backing = Backing.JsonElement;
         this.stringBacking = string.Empty;
-        this.boolBacking = default;
-        this.numberBacking = default;
+        this.numericType = default;
         this.arrayBacking = ImmutableList<JsonAny>.Empty;
         this.objectBacking = ImmutableList<JsonObjectProperty>.Empty;
     }
@@ -57,8 +55,6 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
         this.jsonElementBacking = value;
         this.backing = Backing.JsonElement;
         this.stringBacking = string.Empty;
-        this.boolBacking = default;
-        this.numberBacking = default;
         this.arrayBacking = ImmutableList<JsonAny>.Empty;
         this.objectBacking = ImmutableList<JsonObjectProperty>.Empty;
     }
@@ -72,8 +68,20 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
         this.jsonElementBacking = default;
         this.backing = Backing.String;
         this.stringBacking = value;
-        this.boolBacking = default;
-        this.numberBacking = default;
+        this.arrayBacking = ImmutableList<JsonAny>.Empty;
+        this.objectBacking = ImmutableList<JsonObjectProperty>.Empty;
+    }
+
+    /// <summary>
+    /// Initializes a new instance of the <see cref="JsonAny"/> struct.
+    /// </summary>
+    /// <param name="value">The value from which to construct the instance.</param>
+    public JsonAny(BinaryJsonNumber value)
+    {
+        this.jsonElementBacking = default;
+        this.backing = Backing.Number;
+        this.numericBacking = value;
+        this.stringBacking = string.Empty;
         this.arrayBacking = ImmutableList<JsonAny>.Empty;
         this.objectBacking = ImmutableList<JsonObjectProperty>.Empty;
     }
@@ -85,40 +93,9 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
     public <#= TypeName #>(bool value)
     {
         this.jsonElementBacking = default;
-        this.backing = Backing.Bool;
+        this.backing = Backing.Array;
         this.stringBacking = string.Empty;
-        this.boolBacking = value;
-        this.numberBacking = default;
-        this.arrayBacking = ImmutableList<JsonAny>.Empty;
-        this.objectBacking = ImmutableList<JsonObjectProperty>.Empty;
-    }
-
-    /// <summary>
-    /// Initializes a new instance of the <see cref="<#= TypeName #>"/> struct.
-    /// </summary>
-    /// <param name="value">The value from which to construct the instance.</param>
-    public <#= TypeName #>(long value)
-    {
-        this.jsonElementBacking = default;
-        this.backing = Backing.Number;
-        this.stringBacking = string.Empty;
-        this.boolBacking = default;
-        this.numberBacking = (double)value;
-        this.arrayBacking = ImmutableList<JsonAny>.Empty;
-        this.objectBacking = ImmutableList<JsonObjectProperty>.Empty;
-    }
-
-    /// <summary>
-    /// Initializes a new instance of the <see cref="<#= TypeName #>"/> struct.
-    /// </summary>
-    /// <param name="value">The value from which to construct the instance.</param>
-    public <#= TypeName #>(double value)
-    {
-        this.jsonElementBacking = default;
-        this.backing = Backing.Number;
-        this.stringBacking = string.Empty;
-        this.boolBacking = default;
-        this.numberBacking = value;
+        this.numericBacking = new(value); // We reuse the binary number to avoid allocating an extra int.
         this.arrayBacking = ImmutableList<JsonAny>.Empty;
         this.objectBacking = ImmutableList<JsonObjectProperty>.Empty;
     }
@@ -132,8 +109,6 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
         this.jsonElementBacking = default;
         this.backing = Backing.Array;
         this.stringBacking = string.Empty;
-        this.boolBacking = default;
-        this.numberBacking = default;
         this.arrayBacking = value;
         this.objectBacking = ImmutableList<JsonObjectProperty>.Empty;
     }
@@ -147,8 +122,6 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
         this.jsonElementBacking = default;
         this.backing = Backing.Object;
         this.stringBacking = string.Empty;
-        this.boolBacking = default;
-        this.numberBacking = default;
         this.arrayBacking = ImmutableList<JsonAny>.Empty;
         this.objectBacking = value;
     }
@@ -188,12 +161,12 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
 
             if ((this.backing & Backing.Bool) != 0)
             {
-                return JsonValueHelpers.BoolToJsonElement(this.boolBacking);
+                return JsonValueHelpers.BoolToJsonElement(this.numericBacking.GetByteAsBool());
             }
 
             if ((this.backing & Backing.Number) != 0)
             {
-                return JsonValueHelpers.NumberToJsonElement(this.numberBacking);
+                return JsonValueHelpers.NumberToJsonElement(this.numericBacking);
             }
 
             if ((this.backing & Backing.Null) != 0)
@@ -246,7 +219,7 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
 
             if ((this.backing & Backing.Bool) != 0)
             {
-                return new(this.boolBacking);
+                return new(this.numericBacking.GetByteAsBool());
             }
 
             throw new InvalidOperationException();
@@ -265,7 +238,7 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
 
             if ((this.backing & Backing.Number) != 0)
             {
-                return new(this.numberBacking);
+                return new(this.numericBacking);
             }
 
             throw new InvalidOperationException();
@@ -333,7 +306,7 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
 
             if ((this.backing & Backing.Bool) != 0)
             {
-                return this.boolBacking ? JsonValueKind.True : JsonValueKind.False;
+                return this.numericBacking.GetByteAsBool() ? JsonValueKind.True : JsonValueKind.False;
             }
 
             if ((this.backing & Backing.Number) != 0)
@@ -390,12 +363,12 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
 
         if ((value.backing & Backing.Number) != 0)
         {
-            return new(value.numberBacking);
+            return new(value.numericBacking, value.numericType);
         }
 
         if ((value.backing & Backing.Bool) != 0)
         {
-            return new(value.boolBacking);
+            return new(value.numericBacking[0] != 0);
         }
 
         if ((value.backing & Backing.Null) != 0)
@@ -452,7 +425,7 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
             JsonValueKind.Object => new(value.AsObject.AsPropertyBacking()),
             JsonValueKind.Array => new(value.AsArray.AsImmutableList()),
             JsonValueKind.String => new((string)value.AsString),
-            JsonValueKind.Number => new((double)value.AsNumber),
+            JsonValueKind.Number => new(value.AsNumber.AsBinaryJsonNumber),
             JsonValueKind.True => new(true),
             JsonValueKind.False => new(false),
             JsonValueKind.Null => Null,
@@ -560,7 +533,7 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
 
         if (value.ValueKind == JsonValueKind.Number)
         {
-            return new((double)value.AsNumber);
+            return new(value.AsBinaryJsonNumber);
         }
 
         return Undefined;
@@ -648,9 +621,14 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
             return new(boolResult);
         }
 
-        if (double.TryParse(value, out double numberResult))
+        if (double.TryParse(value, out double doubleResult))
         {
-            return new(numberResult);
+            return new(new BinaryJsonNumber(doubleResult));
+        }
+
+        if (decimal.TryParse(value, out decimal decimalResult))
+        {
+            return new(new BinaryJsonNumber(decimalResult));
         }
 
         return new(value);
@@ -675,9 +653,14 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
             return new(boolResult);
         }
 
-        if (double.TryParse(valueSpan, out double numberResult))
+        if (double.TryParse(valueSpan, out double doubleResult))
         {
-            return new(numberResult);
+            return new(new BinaryJsonNumber(doubleResult));
+        }
+
+        if (decimal.TryParse(valueSpan, out decimal decimalResult))
+        {
+            return new(new BinaryJsonNumber(decimalResult));
         }
 
         return new(valueSpan.ToString());
@@ -843,7 +826,7 @@ public readonly partial struct <#= TypeName #> : IJsonValue<<#= TypeName #>>
 
         if ((this.backing & Backing.Number) != 0)
         {
-            writer.WriteNumberValue(this.numberBacking);
+            this.numberBacking.WriteTo(writer);
             return;
         }
 
