Fixed comparison operators for nulls and undefined JsonElements.

--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Number.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Number.tt
@@ -440,7 +440,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonNumb
     /// <returns><see langword="true"/> if the left is less than the right, otherwise <see langword="false"/>.</returns>
     public static bool operator <(in <#= TypeDeclaration.DotnetTypeName #> left, in <#= TypeDeclaration.DotnetTypeName #> right)
     {
-        return Compare(left, right) < 0;
+        return left.IsNotNullOrUndefined() && right.IsNotNullOrUndefined() && Compare(left, right) < 0;
     }
 
     /// <summary>
@@ -451,7 +451,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonNumb
     /// <returns><see langword="true"/> if the left is greater than the right, otherwise <see langword="false"/>.</returns>
     public static bool operator >(in <#= TypeDeclaration.DotnetTypeName #> left, in <#= TypeDeclaration.DotnetTypeName #> right)
     {
-        return Compare(left, right) > 0;
+        return left.IsNotNullOrUndefined() && right.IsNotNullOrUndefined() && Compare(left, right) > 0;
     }
 
     /// <summary>
@@ -462,7 +462,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonNumb
     /// <returns><see langword="true"/> if the left is less than the right, otherwise <see langword="false"/>.</returns>
     public static bool operator <=(in <#= TypeDeclaration.DotnetTypeName #> left, in <#= TypeDeclaration.DotnetTypeName #> right)
     {
-        return Compare(left, right) <= 0;
+        return left.IsNotNullOrUndefined() && right.IsNotNullOrUndefined() && Compare(left, right) <= 0;
     }
 
     /// <summary>
@@ -473,7 +473,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonNumb
     /// <returns><see langword="true"/> if the left is greater than the right, otherwise <see langword="false"/>.</returns>
     public static bool operator >=(in <#= TypeDeclaration.DotnetTypeName #> left, in <#= TypeDeclaration.DotnetTypeName #> right)
     {
-        return Compare(left, right) >= 0;
+        return left.IsNotNullOrUndefined() && right.IsNotNullOrUndefined() && Compare(left, right) >= 0;
     }
 
     /// <summary>
@@ -487,7 +487,7 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonNumb
         if (lhs.ValueKind != rhs.ValueKind)
         {
             // We can't be equal if we are not the same underlying type
-            return -1;
+            return lhs.IsNullOrUndefined() ? 1 : -1;
         }
 
         if (lhs.IsNull())
