Added basic numeric operations to numbers.

--- a/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Number.tt
+++ b/Solutions/Corvus.Json.CodeGeneration.Abstractions/SharedTemplates/CodeGenerator.Number.tt
@@ -19,6 +19,7 @@
 #nullable enable
 
 using System.Collections.Immutable;
+using System.Numerics;
 using System.Runtime.CompilerServices;
 using System.Text.Json;
 using Corvus.Json;
@@ -30,7 +31,14 @@ namespace <#= Namespace #>;
 /// <summary>
 /// A type generated from a JsonSchema specification.
 /// </summary>
-public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonNumber<<#= TypeDeclaration.DotnetTypeName #>>
+public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> 
+: IJsonNumber<<#= TypeDeclaration.DotnetTypeName #>>,
+  IAdditionOperators<<#= TypeDeclaration.DotnetTypeName #>, <#= TypeDeclaration.DotnetTypeName #>, <#= TypeDeclaration.DotnetTypeName #>>,
+  ISubtractionOperators<<#= TypeDeclaration.DotnetTypeName #>, <#= TypeDeclaration.DotnetTypeName #>, <#= TypeDeclaration.DotnetTypeName #>>,
+  IMultiplyOperators<<#= TypeDeclaration.DotnetTypeName #>, <#= TypeDeclaration.DotnetTypeName #>, <#= TypeDeclaration.DotnetTypeName #>>,
+  IDivisionOperators<<#= TypeDeclaration.DotnetTypeName #>, <#= TypeDeclaration.DotnetTypeName #>, <#= TypeDeclaration.DotnetTypeName #>>,
+  IIncrementOperators<<#= TypeDeclaration.DotnetTypeName #>>,
+  IDecrementOperators<<#= TypeDeclaration.DotnetTypeName #>>
 {
    /// <summary>
     /// Initializes a new instance of the <see cref="<#= TypeDeclaration.DotnetTypeName #>"/> struct.
@@ -669,6 +677,72 @@ public readonly partial struct <#= TypeDeclaration.DotnetTypeName #> : IJsonNumb
     public static bool operator >=(in <#= TypeDeclaration.DotnetTypeName #> left, in <#= TypeDeclaration.DotnetTypeName #> right)
     {
         return left.IsNotNullOrUndefined() && right.IsNotNullOrUndefined() && Compare(left, right) >= 0;
+    }
+
+        /// <summary>
+    /// Adds two values together to compute their sum.
+    /// </summary>
+    /// <param name="left">The left hand side.</param>
+    /// <param name="right">The right hand side.</param>
+    /// <returns>The resulting value.</returns>
+    public static <#= TypeDeclaration.DotnetTypeName #> operator +(<#= TypeDeclaration.DotnetTypeName #> left, <#= TypeDeclaration.DotnetTypeName #> right)
+    {
+        return new(left.AsBinaryJsonNumber + right.AsBinaryJsonNumber);
+    }
+
+    /// <summary>
+    /// Subtracts two values together to compute their difference.
+    /// </summary>
+    /// <param name="left">The left hand side.</param>
+    /// <param name="right">The right hand side.</param>
+    /// <returns>The resulting value.</returns>
+    public static <#= TypeDeclaration.DotnetTypeName #> operator -(<#= TypeDeclaration.DotnetTypeName #> left, <#= TypeDeclaration.DotnetTypeName #> right)
+    {
+        return new(left.AsBinaryJsonNumber - right.AsBinaryJsonNumber);
+    }
+
+    /// <summary>
+    /// Multiplies two values together.
+    /// </summary>
+    /// <param name="left">The left hand side.</param>
+    /// <param name="right">The right hand side.</param>
+    /// <returns>The resulting value.</returns>
+    public static <#= TypeDeclaration.DotnetTypeName #> operator *(<#= TypeDeclaration.DotnetTypeName #> left, <#= TypeDeclaration.DotnetTypeName #> right)
+    {
+        return new(left.AsBinaryJsonNumber * right.AsBinaryJsonNumber);
+    }
+
+    /// <summary>
+    /// Divides two values.
+    /// </summary>
+    /// <param name="left">The left hand side.</param>
+    /// <param name="right">The right hand side.</param>
+    /// <returns>The resulting value.</returns>
+    public static <#= TypeDeclaration.DotnetTypeName #> operator /(<#= TypeDeclaration.DotnetTypeName #> left, <#= TypeDeclaration.DotnetTypeName #> right)
+    {
+        return new(left.AsBinaryJsonNumber / right.AsBinaryJsonNumber);
+    }
+
+    /// <summary>
+    /// Increments the value.
+    /// </summary>
+    /// <param name="value">The value.</param>
+    /// <returns>The resulting value.</returns>
+    public static <#= TypeDeclaration.DotnetTypeName #> operator ++(<#= TypeDeclaration.DotnetTypeName #> value)
+    {
+        BinaryJsonNumber num = value.AsBinaryJsonNumber;
+        return new(num++);
+    }
+
+    /// <summary>
+    /// Decrements the value.
+    /// </summary>
+    /// <param name="value">The value.</param>
+    /// <returns>The resulting value.</returns>
+    public static <#= TypeDeclaration.DotnetTypeName #> operator --(<#= TypeDeclaration.DotnetTypeName #> value)
+    {
+        BinaryJsonNumber num = value.AsBinaryJsonNumber;
+        return new(num--);
     }
 
     /// <summary>
